NetBSD Problem Report #48901

From alnsn@NetBSD.org  Thu Jun 12 11:09:17 2014
Return-Path: <alnsn@NetBSD.org>
Received: by mollari.NetBSD.org (Postfix, from userid 1459)
	id 17343A6543; Thu, 12 Jun 2014 11:09:17 +0000 (UTC)
Message-Id: <20140612110917.17343A6543@mollari.NetBSD.org>
Date: Thu, 12 Jun 2014 11:09:17 +0000 (UTC)
From: alnsn@NetBSD.org
Reply-To: alnsn@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: kernel doesn't build without INET6
X-Send-Pr-Version: 3.95

>Number:         48901
>Category:       kern
>Synopsis:       kernel doesn't build without INET6
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jun 12 11:10:00 +0000 2014
>Closed-Date:    Thu Jun 12 12:15:33 +0000 2014
>Last-Modified:  Thu Jun 12 16:45:01 +0000 2014
>Originator:     Alexander Nasonov
>Release:        NetBSD 6.99.43
>Organization:
NetBSD
>Environment:
System: NetBSD neva 6.99.43 NetBSD 6.99.43 (GENERIC) #0: Thu Jun 12 10:32:05 BST 2014  alnsn@neva:/home/alnsn/netbsd-current/src/sys/arch/amd64/compile/obj/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	GENERIC kernel doesn't link if 'options INET6' is commented out:
	$ ./build.sh -U kernel=GENERIC
	...
	#      link  GENERIC/netbsd
	/home/alnsn/netbsd-current/tooldir.gcc48.amd64/bin/x86_64--netbsd-ld -Map netbsd.map --cref -T /home/alnsn/netbsd-current/src/sys/arch/amd64/conf/kern.ldscript -Ttext 0xffffffff80100000 -e start -z max-page-size=0x100000 -X -o netbsd ${SYSTEM_OBJ} ${EXTRA_OBJ} vers.o
	if_stf.o: In function `in_stf_input':
	if_stf.c:(.text+0x4e8): undefined reference to `ip6_pktq'
	*** [netbsd] Error code 1

	nbmake: stopped in /home/alnsn/netbsd-current/src/sys/arch/amd64/compile/obj/GENERIC
	1 error

	nbmake: stopped in /home/alnsn/netbsd-current/src/sys/arch/amd64/compile/obj/GENERIC

	ERROR: Failed to make all in "/home/alnsn/netbsd-current/src/sys/arch/amd64/compile/obj/GENERIC"
	*** BUILD ABORTED ***
>How-To-Repeat:
	Comment out 'options INET6' from sys/arch/amd64/conf/GENERIC.
>Fix:
	I haven't tried fixing it.

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/48901: kernel doesn't build without INET6
Date: Thu, 12 Jun 2014 13:13:07 +0200

 A non-INET6 kernel may not use the "stf" pseudo-device. Remove that as well
 and it should compile.

 Martin

From: Alexander Nasonov <alnsn@yandex.ru>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org, alnsn@NetBSD.org
Subject: Re: kern/48901: kernel doesn't build without INET6
Date: Thu, 12 Jun 2014 12:17:33 +0100

 Martin Husemann wrote:
 > The following reply was made to PR kern/48901; it has been noted by GNATS.
 > 
 > From: Martin Husemann <martin@duskware.de>
 > To: gnats-bugs@NetBSD.org
 > Cc: 
 > Subject: Re: kern/48901: kernel doesn't build without INET6
 > Date: Thu, 12 Jun 2014 13:13:07 +0200
 > 
 >  A non-INET6 kernel may not use the "stf" pseudo-device. Remove that as well
 >  and it should compile.

 This is non-trivial and should be documented next to the INET6 option.

 Alex

State-Changed-From-To: open->closed
State-Changed-By: alnsn@NetBSD.org
State-Changed-When: Thu, 12 Jun 2014 12:15:33 +0000
State-Changed-Why:
Not a bug.


From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, alnsn@NetBSD.org
Cc: 
Subject: Re: kern/48901 (kernel doesn't build without INET6)
Date: Thu, 12 Jun 2014 09:53:36 -0400

 On Jun 12, 12:15pm, alnsn@NetBSD.org (alnsn@NetBSD.org) wrote:
 -- Subject: Re: kern/48901 (kernel doesn't build without INET6)

 | Synopsis: kernel doesn't build without INET6
 | 
 | State-Changed-From-To: open->closed
 | State-Changed-By: alnsn@NetBSD.org
 | State-Changed-When: Thu, 12 Jun 2014 12:15:33 +0000
 | State-Changed-Why:

 It could behave better! Let's re-open and add #error in the source file.

 christos

From: Mindaugas Rasiukevicius <rmind@netbsd.org>
To: christos@zoulas.com (Christos Zoulas)
Cc: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org,
 netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, alnsn@NetBSD.org
Subject: Re: kern/48901 (kernel doesn't build without INET6)
Date: Thu, 12 Jun 2014 15:11:56 +0100

 christos@zoulas.com (Christos Zoulas) wrote:
 > On Jun 12, 12:15pm, alnsn@NetBSD.org (alnsn@NetBSD.org) wrote:
 > -- Subject: Re: kern/48901 (kernel doesn't build without INET6)
 > 
 > | Synopsis: kernel doesn't build without INET6
 > | 
 > | State-Changed-From-To: open->closed
 > | State-Changed-By: alnsn@NetBSD.org
 > | State-Changed-When: Thu, 12 Jun 2014 12:15:33 +0000
 > | State-Changed-Why:
 > 
 > It could behave better! Let's re-open and add #error in the source file.
 > 
 > christos

 Err.. it used to work.  Is it my breakage?  Does not appear so.

 -- 
 Mindaugas

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48901 CVS commit: src/sys/net
Date: Thu, 12 Jun 2014 12:43:09 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Jun 12 16:43:09 UTC 2014

 Modified Files:
 	src/sys/net: if_stf.c

 Log Message:
 PR/48901: Fail at compile time when trying to compile stf without inet6,
 and print an explanatory message.


 To generate a diff of this commit:
 cvs rdiff -u -r1.79 -r1.80 src/sys/net/if_stf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: christos@zoulas.com (Christos Zoulas)
To: Mindaugas Rasiukevicius <rmind@netbsd.org>
Cc: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, alnsn@NetBSD.org
Subject: Re: kern/48901 (kernel doesn't build without INET6)
Date: Thu, 12 Jun 2014 12:44:35 -0400

 On Jun 12,  3:11pm, rmind@netbsd.org (Mindaugas Rasiukevicius) wrote:
 -- Subject: Re: kern/48901 (kernel doesn't build without INET6)

 | Err.. it used to work.  Is it my breakage?  Does not appear so.

 I am not sure. Doesn't this need INET6 to work? It complains at link time
 not finding:

     if_stf.c:(.text+0x4e8): undefined reference to `ip6_pktq'

 Anyway, I added #error to it.

 christos

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.