PR/48901: Fail at compile time when trying to compile stf without inet6, and print an explanatory message.